<resources>
    <string name="app_name">Solar System App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_api">Search</string>
    <string name="menu_saved">Saved</string>
    <string name="menu_calendar">Cool pictures</string>
    <string name="planet">Planet</string>
    <string name="moon">Moon</string>
    <string name="star">Star</string>
    <string name="asteroid">Asteroid</string>
    <string name="comet">Comet</string>
    <string name="dwarf_planet">Dwarf Planet</string>
    <string name="planet_plural">Planets</string>
    <string name="moon_plural">Moons</string>
    <string name="asteroid_plural">Asteroids</string>
    <string name="star_plural">Star</string>
    <string name="dwarf_planet_plural">Dwarf Planets</string>
    <string name="technical_data">Available body attributes</string>
    <string name="no_description">No description available for this body</string>
    <string name="no_moons">This body has no moons</string>
    <string name="body_type">Body type: %1$s</string>
    <string name="discovered_by">Discovered by: %1$s</string>
    <string name="date">Date: %1$s</string>

    <!-- Strings with placeholders -->
    <string name="total_moons">This body has %1$d moons</string>
    <string name="saved_body">%1$s was succesfully saved</string>
    <string name="error_load_apod">Astronomy picture of the day couldn\'t load :(</string>
    <string name="no_copyright">Unknown author</string>
    <string name="no_apod_date">No date available</string>
    <string name="no_apod_explanation">No description available for this day</string>
    <string name="favorite_apod">Mark as favorite</string>
    <string name="apod_saved">Astronomic picture of the day saved</string>
    <string name="go_to_saved_apod">See favorites</string>
    <string name="loading_moons">Loading moons...</string>
    <string name="search_moons">Search for a specefic moon</string>
    <string name="filter_chip">Filter by categories:</string>
    <string name="settings">Settings\n</string>



    <string name="avg_temp">Average temperature: %1$.0f K</string>
    <string name="density">Density: %1$.2f g/cm³</string>
    <string name="gravity">Gravity: %1$.2f m/s²</string>
    <string name="escape">Escape velocity: %1$.0f m/s</string>
    <string name="mean_radius">Mean radius: %1$.0f km</string>
    <string name="semimajor_axis">Semimajor axis: %1$.0f km</string>
    <string name="sideral_orbit">Sidereal orbit: %1$.1f days</string>
    <string name="sideral_rotation">Sidereal rotation: %1$.1f hours</string>
    <string name="polar_radius">Polar radius: %1$.0f km</string>
    <string name="aphelion">Aphelion: %1$.0f km</string>

    <!-- Unknown -->
    <string name="unknown">Unknown</string>
    <string name="comet_plural">Comets</string>
    <string name="filtered_moons">Filtered moons: %1$d</string>
    <string name="search_body">Search for a body I.E: Mars</string>
    <string name="select_apod_date">Select another date</string>
    <string name="date_picker">Select date to load astronomic picture</string>
    <string name="empty_search_view">Insert a body to search in the search view</string>
    <string name="searching_body">Searching</string>
    <string name="no_results_in_filters">No results available for the selected filters</string>
    <string name="no_results">"No results available for: "</string>
    <string name="nasa_author">NASA</string>
    <string name="apod_image">Astronomic picture of the day! =)</string>
    <string name="another_date">Looking for another date?</string>
    <string name="error_loading">"Error when loading: "</string>
    <string name="saved_bodies">Saved bodies</string>
    <string name="error_loading_bodies">Couldn\'t load bodies. Check your network connection</string>
    <string name="no_saved_images">No saved images</string>


</resources>