<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tvSaved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Guardados"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp" />

        <!-- Línea guía para dividir en 2 columnas -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />

        <!--Card 1-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardPlanet"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/tvSaved"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_planet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/planet_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 2 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardMoon"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSaved"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_moon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moon_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Card 3 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardAsteroid"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/cardPlanet"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_asteroid" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/asteroid_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Card 4 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardComet"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardMoon"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_comet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/moon_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>



        <!-- Card 5 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardStar"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/guideline50"
            app:layout_constraintTop_toBottomOf="@id/cardAsteroid"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_sun" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/star_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


        <!-- Card 6 -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardDwarfPlanet"
            android:layout_width="0dp"
            android:layout_height="160dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            app:layout_constraintStart_toStartOf="@id/guideline50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardComet"
            android:layout_margin="8dp"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="12dp">

                <ImageView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/ic_dwarf_planet" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dwarf_planet_plural"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
